Hide the main pane until js loaded to avoid annoying jump

--- a/brunch/src/app/styles/sass/screen.scss
+++ b/brunch/src/app/styles/sass/screen.scss
@@ -40,6 +40,7 @@ ul, ol {
 }
 
 #simple-gtd-app {
+  display: none;
   background: white;
   width: 400px;
   @include apply-side-rhythm-border('left', 2px);
